--- a/stimulate.ipynb
+++ b/stimulate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "19db3272",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ea2b9c30",
    "metadata": {},
    "outputs": [],
@@ -33,37 +33,25 @@
     "nb_exc_units = 100\n",
     "nb_inh_units = 25\n",
     "device = torch.device(\"cuda\")\n",
-    "dtype = torch.float\n",
-    "epoch = 10\n",
-    "file_name = \"\""
+    "dtype = torch.float"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ed75897b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1 = np.loadtxt(\"spks/5hz_spikes_10000s_2.ras\")\n",
-    "data2 = np.loadtxt(\"spks/5hz_spikes_100s_2.ras\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "fb998992",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data1 = np.loadtxt(\"spks/5hz_spikes_50000s_2.ras\")\n",
     "dataset1 = LPLDataset(data1, time_step=dt, time_window=time_window, device=device)\n",
-    "dataset2 = LPLDataset(data2, time_step=dt, time_window=time_window, device=device)\n",
-    "generator = SparseGenerator(nb_workers=0)"
+    "data2 = np.loadtxt(\"spks/5hz_spikes_100s_2.ras\")\n",
+    "dataset2 = LPLDataset(data2, time_step=dt, time_window=time_window, device=device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6dcd9b5a",
    "metadata": {},
    "outputs": [],
@@ -73,7 +61,7 @@
     "ie_con_prob  = 0.5\n",
     "lpl_con_w    = 0.15\n",
     "ii_con_w     = 0.4\n",
-    "ie_con_w     = 0.1\n",
+    "ie_con_w     = 0.5\n",
     "\n",
     "ei_con_w     = 0.5"
    ]
@@ -88,46 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ab9dfff4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "# Model summary\n",
-      "\n",
-      "## Groups\n",
-      "input, (500,)\n",
-      "exc, (100,)\n",
-      "inh, (25,)\n",
-      "\n",
-      "## Connections\n",
-      "LPLConnection(\n",
-      "  (src): InputGroup()\n",
-      "  (dst): LPLGroup()\n",
-      "  (op): Linear(in_features=500, out_features=100, bias=False)\n",
-      ")\n",
-      "Connection(\n",
-      "  (src): LPLGroup()\n",
-      "  (dst): LPLGroup()\n",
-      "  (op): Linear(in_features=100, out_features=25, bias=False)\n",
-      ")\n",
-      "Connection(\n",
-      "  (src): LPLGroup()\n",
-      "  (dst): LPLGroup()\n",
-      "  (op): Linear(in_features=25, out_features=25, bias=False)\n",
-      ")\n",
-      "SymmetricSTDPConnection(\n",
-      "  (src): LPLGroup()\n",
-      "  (dst): LPLGroup()\n",
-      "  (op): Linear(in_features=25, out_features=100, bias=False)\n",
-      ")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = LPLModel(batch_size, nb_time_steps, nb_inputs, device, dtype)\n",
     "\n",
@@ -137,7 +89,7 @@
     "constraints1 = MinMaxConstraint(0.0, 1.0)\n",
     "constraints2 = MinMaxConstraint(0.0, 10.0)\n",
     "\n",
-    "con1 = model.add_connection(\n",
+    "lplcon = model.add_connection(\n",
     "    LPLConnection(\n",
     "    input_group, \n",
     "    exc_neurons, \n",
@@ -151,9 +103,10 @@
     "    phi=1.0,\n",
     "    lr=1e-2,\n",
     "    delta_time=20e-3,\n",
+    "    tau_rms=100.0,\n",
     "    timestep_rmsprop_updates=timestep_rmsprop_updates))\n",
     "\n",
-    "con2 = model.add_connection(\n",
+    "conei = model.add_connection(\n",
     "    Connection(\n",
     "        exc_neurons, \n",
     "        inh_neurons, \n",
@@ -162,7 +115,7 @@
     "        name=\"Con1\", \n",
     "        target=\"exc\"))\n",
     "\n",
-    "con3 = model.add_connection(\n",
+    "conii = model.add_connection(\n",
     "    Connection(\n",
     "        inh_neurons, \n",
     "        inh_neurons, \n",
@@ -171,7 +124,7 @@
     "        name=\"Con2\", \n",
     "        target=\"inh\"))\n",
     "\n",
-    "con4 = model.add_connection(\n",
+    "conie = model.add_connection(\n",
     "    SymmetricSTDPConnection(\n",
     "        inh_neurons, \n",
     "        exc_neurons, \n",
@@ -183,98 +136,37 @@
     "        lr=1e-3,\n",
     "        kappa=10))\n",
     "\n",
+    "generator = SparseGenerator(nb_workers=0)\n",
     "model.configure(input=input_group, generator=generator, time_step=dt)\n",
     "model.summary()\n",
     "\n",
-    "con1.set_evolve(True)\n",
-    "con4.set_evolve(True)\n"
+    "exc_neurons.random_mem(mean=-60e-3, sigma=10e-3, seed=42)\n",
+    "lplcon.set_evolve(True)\n",
+    "conie.set_evolve(True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "f0abbe74",
+   "execution_count": null,
+   "id": "e446f5fb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stimulate start!\n",
-      "   epoch 0 end!\n",
-      "   epoch 1 end!\n",
-      "   epoch 2 end!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# model.stored = False\n",
-    "# model.map = {}\n",
-    "# model.store_out = {}\n",
-    "# model.store_weight = {}\n",
-    "model.stimulate(dataset1, epoch=1)"
+    "\n",
+    "model.stimulate(dataset1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "ed5fa40e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stimulate start!\n",
-      "   epoch 0 end!\n",
-      "   out_50000s_2_lpl have stored!\n",
-      "   weight_50000s_2_lpl have stored!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
-    "list_con = [con1.name]\n",
-    "model.configure_stored(list_neurons, list_con, \"_10000s_lpl\")\n",
+    "list_con = [lplcon.name]\n",
+    "model.configure_stored(list_neurons, list_con, \"_50000s_LPL\")\n",
     "model.stimulate(dataset2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "b1096b01",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[-3.9910e-10, -5.2004e-12, -1.0247e-08,  ..., -1.2910e-02,\n",
-      "         -5.1996e-03, -1.3283e-05],\n",
-      "        [-3.9539e-10, -5.1521e-12, -1.0152e-08,  ..., -1.2789e-02,\n",
-      "         -5.1482e-03, -1.3159e-05],\n",
-      "        [-8.4248e-10, -1.0978e-11, -2.1630e-08,  ..., -1.5172e-02,\n",
-      "         -5.1643e-03, -2.8037e-05],\n",
-      "        ...,\n",
-      "        [-8.6581e-10, -1.1282e-11, -2.2229e-08,  ..., -2.8038e-02,\n",
-      "         -1.1365e-02, -2.8816e-05],\n",
-      "        [-4.0047e-10, -5.2182e-12, -1.0282e-08,  ..., -1.2954e-02,\n",
-      "         -5.2185e-03, -1.3328e-05],\n",
-      "        [-8.7631e-10, -1.1419e-11, -2.2499e-08,  ..., -1.5808e-02,\n",
-      "         -5.1660e-03, -2.9163e-05]], device='cuda:0')\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print\n",
-    "# (\n",
-    "#     con1.trace_post_mean, \n",
-    "#     con1.trace_post_sigma2, \n",
-    "#     con1.err\n",
-    "# )\n",
-    "# for i in con4.op.weight.data:\n",
-    "#     print(i)\n",
-    "print(con1.el_val_flt * (con1.trace_err_flt.T @ torch.ones_like(con1.src.out)))"
    ]
   },
   {
@@ -301,7 +193,7 @@
     "constraints1 = MinMaxConstraint(0.0, 1.0)\n",
     "constraints2 = MinMaxConstraint(0.0, 10.0)\n",
     "\n",
-    "con1 = model.add_connection(\n",
+    "lplcon = model.add_connection(\n",
     "    LPLConnection(\n",
     "    input_group, \n",
     "    exc_neurons, \n",
@@ -309,56 +201,75 @@
     "    initial_weight=lpl_con_w, \n",
     "    name=\"LPLCon\", \n",
     "    target=\"exc\", \n",
-    "    tau_post_mean=60,\n",
-    "    constraints=None,\n",
+    "    tau_post_mean=600,\n",
+    "    tau_var=30,\n",
+    "    constraints=constraints1,\n",
     "    lamda_=1.0,\n",
-    "    phi=0.0))\n",
+    "    phi=0.0,\n",
+    "    lr=1e-2,\n",
+    "    delta_time=20e-3,\n",
+    "    tau_rms=100.0,\n",
+    "    timestep_rmsprop_updates=timestep_rmsprop_updates))\n",
     "\n",
-    "con2 = model.add_connection(\n",
+    "conei = model.add_connection(\n",
     "    Connection(\n",
     "        exc_neurons, \n",
     "        inh_neurons, \n",
-    "        gaussian=True, \n",
-    "        name=\"Con1\", \n",
+    "        gaussian=True,\n",
+    "        initial_weight=ei_con_w, \n",
+    "        name=\"Conei\", \n",
     "        target=\"exc\"))\n",
     "\n",
-    "con3 = model.add_connection(\n",
+    "conii = model.add_connection(\n",
     "    Connection(\n",
     "        inh_neurons, \n",
     "        inh_neurons, \n",
     "        connection_prob=ii_con_prob, \n",
     "        initial_weight=ii_con_w, \n",
-    "        name=\"Con2\", \n",
+    "        name=\"Conii\", \n",
     "        target=\"inh\"))\n",
     "\n",
-    "con4 = model.add_connection(\n",
+    "conie = model.add_connection(\n",
     "    SymmetricSTDPConnection(\n",
     "        inh_neurons, \n",
     "        exc_neurons, \n",
     "        connection_prob=ie_con_prob, \n",
     "        initial_weight=ie_con_w, \n",
-    "        name=\"STDPCon\", \n",
+    "        name=\"conie\", \n",
     "        target=\"inh\",\n",
-    "        constraints=constraints2))\n",
+    "        constraints=constraints2,\n",
+    "        lr=1e-3,\n",
+    "        kappa=10))\n",
     "\n",
+    "generator = SparseGenerator(nb_workers=0)\n",
     "model.configure(input=input_group, generator=generator, time_step=dt)\n",
     "model.summary()\n",
     "\n",
-    "con1.set_evolve(True)\n",
-    "con4.set_evolve(True)"
+    "exc_neurons.random_mem()\n",
+    "lplcon.set_evolve(True)\n",
+    "conie.set_evolve(True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74215430",
+   "id": "7c9248ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.stimulate(dataset1, epoch=epoch)\n",
+    "model.stimulate(dataset1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e22f42a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
-    "list_con = [con1.name]\n",
-    "model.configure_stored(list_neurons, list_con, file_name + \"_pred_off\")\n",
+    "list_con = [lplcon.name]\n",
+    "model.configure_stored(list_neurons, list_con, \"_50000s_Pred_off\")\n",
     "model.stimulate(dataset2)"
    ]
   },
@@ -386,7 +297,7 @@
     "constraints1 = MinMaxConstraint(0.0, 1.0)\n",
     "constraints2 = MinMaxConstraint(0.0, 10.0)\n",
     "\n",
-    "con1 = model.add_connection(\n",
+    "lplcon = model.add_connection(\n",
     "    LPLConnection(\n",
     "    input_group, \n",
     "    exc_neurons, \n",
@@ -394,45 +305,63 @@
     "    initial_weight=lpl_con_w, \n",
     "    name=\"LPLCon\", \n",
     "    target=\"exc\", \n",
-    "    tau_post_mean=60,\n",
+    "    tau_post_mean=600,\n",
+    "    tau_var=30,\n",
     "    constraints=constraints1,\n",
     "    lamda_=0.0,\n",
     "    phi=1.0,\n",
-    "    lr=0.01))\n",
+    "    lr=1e-2,\n",
+    "    delta_time=20e-3,\n",
+    "    tau_rms=100.0,\n",
+    "    timestep_rmsprop_updates=timestep_rmsprop_updates))\n",
     "\n",
-    "con2 = model.add_connection(\n",
+    "conei = model.add_connection(\n",
     "    Connection(\n",
     "        exc_neurons, \n",
     "        inh_neurons, \n",
-    "        gaussian=True, \n",
-    "        name=\"Con1\", \n",
+    "        gaussian=True,\n",
+    "        initial_weight=ei_con_w,  \n",
+    "        name=\"Conei\", \n",
     "        target=\"exc\"))\n",
     "\n",
-    "con3 = model.add_connection(\n",
+    "conii = model.add_connection(\n",
     "    Connection(\n",
     "        inh_neurons, \n",
     "        inh_neurons, \n",
     "        connection_prob=ii_con_prob, \n",
     "        initial_weight=ii_con_w, \n",
-    "        name=\"Con2\", \n",
+    "        name=\"Conii\", \n",
     "        target=\"inh\"))\n",
     "\n",
-    "con4 = model.add_connection(\n",
+    "conie = model.add_connection(\n",
     "    SymmetricSTDPConnection(\n",
     "        inh_neurons, \n",
     "        exc_neurons, \n",
     "        connection_prob=ie_con_prob, \n",
     "        initial_weight=ie_con_w, \n",
-    "        name=\"STDPCon\", \n",
+    "        name=\"conie\", \n",
     "        target=\"inh\",\n",
     "        constraints=constraints2,\n",
-    "        lr=0.001))\n",
+    "        lr=1e-3,\n",
+    "        kappa=10))\n",
     "\n",
+    "generator = SparseGenerator(nb_workers=0)\n",
     "model.configure(input=input_group, generator=generator, time_step=dt)\n",
     "model.summary()\n",
+    "exc_neurons.random_mem()\n",
     "\n",
-    "con1.set_evolve(True)\n",
-    "con4.set_evolve(True)"
+    "lplcon.set_evolve(True)\n",
+    "conie.set_evolve(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46369750",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.stimulate(dataset1)"
    ]
   },
   {
@@ -442,10 +371,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.stimulate(dataset1, epoch=3)\n",
     "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
-    "list_con = [con1.name]\n",
-    "model.configure_stored(list_neurons, list_con, file_name + \"_hebb_off\")\n",
+    "list_con = [lplcon.name]\n",
+    "model.configure_stored(list_neurons, list_con, \"_50000s_Hebb_off\")\n",
     "model.stimulate(dataset2)"
    ]
   },
@@ -469,9 +397,9 @@
     "input_group = model.add_group(InputGroup(nb_inputs, name=\"input\"))\n",
     "exc_neurons = model.add_group(LPLGroup(nb_exc_units, name=\"exc\"))\n",
     "\n",
-    "# constraints1 = MinMaxConstraint(0.0, 1.0)\n",
+    "constraints1 = MinMaxConstraint(0.0, 1.0)\n",
     "\n",
-    "con1 = model.add_connection(\n",
+    "lplcon = model.add_connection(\n",
     "    LPLConnection(\n",
     "    input_group, \n",
     "    exc_neurons, \n",
@@ -479,15 +407,32 @@
     "    initial_weight=lpl_con_w, \n",
     "    name=\"LPLCon\", \n",
     "    target=\"exc\", \n",
-    "    tau_post_mean=60,\n",
-    "    constraints=None,\n",
+    "    tau_post_mean=600,\n",
+    "    tau_var=30,\n",
+    "    constraints=constraints1,\n",
     "    lamda_=1.0,\n",
-    "    phi=1.0))\n",
+    "    phi=1.0,\n",
+    "    lr=1e-2,\n",
+    "    delta_time=20e-3,\n",
+    "    tau_rms=100.0,\n",
+    "    timestep_rmsprop_updates=timestep_rmsprop_updates))\n",
     "\n",
+    "generator = SparseGenerator(nb_workers=0)\n",
     "model.configure(input=input_group, generator=generator, time_step=dt)\n",
     "model.summary()\n",
+    "exc_neurons.random_mem()\n",
     "\n",
-    "con1.set_evolve(True)"
+    "lplcon.set_evolve(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5331a1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.stimulate(dataset1)"
    ]
   },
   {
@@ -497,10 +442,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.stimulate(dataset2, epoch=epoch)\n",
-    "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
-    "list_con = [con1.name]\n",
-    "model.configure_stored(list_neurons, list_con, file_name + \"_inhib_off\")\n",
+    "list_neurons = [input_group.name, exc_neurons.name]\n",
+    "list_con = [lplcon.name]\n",
+    "model.configure_stored(list_neurons, list_con, \"_50000s_Inhib_off\")\n",
     "model.stimulate(dataset2)"
    ]
   },
@@ -524,10 +468,10 @@
     "input_group = model.add_group(InputGroup(nb_inputs, name=\"input\"))\n",
     "exc_neurons = model.add_group(LPLGroup(nb_exc_units, name=\"exc\"))\n",
     "inh_neurons = model.add_group(LPLGroup(nb_inh_units, name=\"inh\"))\n",
-    "# constraints1 = MinMaxConstraint(0.0, 1.0)\n",
+    "constraints1 = MinMaxConstraint(0.0, 1.0)\n",
     "\n",
     "\n",
-    "con1 = model.add_connection(\n",
+    "lplcon = model.add_connection(\n",
     "    LPLConnection(\n",
     "    input_group, \n",
     "    exc_neurons, \n",
@@ -535,41 +479,59 @@
     "    initial_weight=lpl_con_w, \n",
     "    name=\"LPLCon\", \n",
     "    target=\"exc\", \n",
-    "    tau_post_mean=60,\n",
-    "    constraints=None,\n",
+    "    tau_post_mean=600,\n",
+    "    tau_var=30,\n",
+    "    constraints=constraints1,\n",
     "    lamda_=1.0,\n",
-    "    phi=1.0))\n",
+    "    phi=1.0,\n",
+    "    lr=1e-2,\n",
+    "    delta_time=20e-3,\n",
+    "    tau_rms=100.0,\n",
+    "    timestep_rmsprop_updates=timestep_rmsprop_updates))\n",
     "\n",
-    "con2 = model.add_connection(\n",
+    "conei = model.add_connection(\n",
     "    Connection(\n",
     "        exc_neurons, \n",
     "        inh_neurons, \n",
-    "        gaussian=True, \n",
-    "        name=\"Con1\", \n",
+    "        gaussian=True,\n",
+    "        initial_weight=ei_con_w,  \n",
+    "        name=\"Conei\", \n",
     "        target=\"exc\"))\n",
     "\n",
-    "con3 = model.add_connection(\n",
+    "conii = model.add_connection(\n",
     "    Connection(\n",
     "        inh_neurons, \n",
     "        inh_neurons, \n",
     "        connection_prob=ii_con_prob, \n",
     "        initial_weight=ii_con_w, \n",
-    "        name=\"Con2\", \n",
+    "        name=\"Conii\", \n",
     "        target=\"inh\"))\n",
     "\n",
-    "con4 = model.add_connection(\n",
+    "conie = model.add_connection(\n",
     "    Connection(\n",
     "        inh_neurons, \n",
     "        exc_neurons, \n",
     "        gaussian=True,\n",
-    "        name=\"Con3\", \n",
-    "        target=\"inh\",\n",
-    "        constraints=None))\n",
+    "        initial_weight=0.5, \n",
+    "        name=\"Conie\", \n",
+    "        target=\"inh\"))\n",
     "\n",
+    "generator = SparseGenerator(nb_workers=0)\n",
     "model.configure(input=input_group, generator=generator, time_step=dt)\n",
     "model.summary()\n",
     "\n",
-    "con1.set_evolve(True)"
+    "exc_neurons.random_mem()\n",
+    "lplcon.set_evolve(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09ab01b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.stimulate(dataset1)"
    ]
   },
   {
@@ -579,10 +541,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.stimulate(dataset1, epoch=epoch)\n",
     "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
-    "list_con = [con1.name]\n",
-    "model.configure_stored(list_neurons, list_con, file_name + \"_inhib_fixed\")\n",
+    "list_con = [lplcon.name]\n",
+    "model.configure_stored(list_neurons, list_con, \"_50000s_Inhib_fixed\")\n",
     "model.stimulate(dataset2)"
    ]
   }
