--- a/stimulate.ipynb
+++ b/stimulate.ipynb
@@ -33,7 +33,9 @@
     "nb_exc_units = 100\n",
     "nb_inh_units = 25\n",
     "device = torch.device(\"cuda\")\n",
-    "dtype = torch.float"
+    "dtype = torch.float\n",
+    "epoch = 1\n",
+    "file_name = \"_50000s_\""
    ]
   },
   {
@@ -153,7 +155,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "model.stimulate(dataset1)"
+    "model.stimulate(dataset1, epoch=epoch)"
    ]
   },
   {
@@ -165,7 +167,7 @@
    "source": [
     "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
     "list_con = [lplcon.name]\n",
-    "model.configure_stored(list_neurons, list_con, \"_50000s_LPL\")\n",
+    "model.configure_stored(list_neurons, list_con, file_name + \"LPL\")\n",
     "model.stimulate(dataset2)"
    ]
   },
@@ -245,7 +247,7 @@
     "model.configure(input=input_group, generator=generator, time_step=dt)\n",
     "model.summary()\n",
     "\n",
-    "exc_neurons.random_mem()\n",
+    "exc_neurons.random_mem(mean=-60e-3, sigma=10e-3, seed=42)\n",
     "lplcon.set_evolve(True)\n",
     "conie.set_evolve(True)"
    ]
@@ -257,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.stimulate(dataset1)"
+    "model.stimulate(dataset1, epoch=epoch)"
    ]
   },
   {
@@ -269,7 +271,7 @@
    "source": [
     "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
     "list_con = [lplcon.name]\n",
-    "model.configure_stored(list_neurons, list_con, \"_50000s_Pred_off\")\n",
+    "model.configure_stored(list_neurons, list_con, file_name + \"Pred_off\")\n",
     "model.stimulate(dataset2)"
    ]
   },
@@ -348,7 +350,7 @@
     "generator = SparseGenerator(nb_workers=0)\n",
     "model.configure(input=input_group, generator=generator, time_step=dt)\n",
     "model.summary()\n",
-    "exc_neurons.random_mem()\n",
+    "exc_neurons.random_mem(mean=-60e-3, sigma=10e-3, seed=42)\n",
     "\n",
     "lplcon.set_evolve(True)\n",
     "conie.set_evolve(True)"
@@ -361,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.stimulate(dataset1)"
+    "model.stimulate(dataset1, epoch=epoch)"
    ]
   },
   {
@@ -373,7 +375,7 @@
    "source": [
     "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
     "list_con = [lplcon.name]\n",
-    "model.configure_stored(list_neurons, list_con, \"_50000s_Hebb_off\")\n",
+    "model.configure_stored(list_neurons, list_con, file_name + \"Hebb_off\")\n",
     "model.stimulate(dataset2)"
    ]
   },
@@ -420,7 +422,7 @@
     "generator = SparseGenerator(nb_workers=0)\n",
     "model.configure(input=input_group, generator=generator, time_step=dt)\n",
     "model.summary()\n",
-    "exc_neurons.random_mem()\n",
+    "exc_neurons.random_mem(mean=-60e-3, sigma=10e-3, seed=42)\n",
     "\n",
     "lplcon.set_evolve(True)"
    ]
@@ -432,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.stimulate(dataset1)"
+    "model.stimulate(dataset1, epoch=epoch)"
    ]
   },
   {
@@ -444,7 +446,7 @@
    "source": [
     "list_neurons = [input_group.name, exc_neurons.name]\n",
     "list_con = [lplcon.name]\n",
-    "model.configure_stored(list_neurons, list_con, \"_50000s_Inhib_off\")\n",
+    "model.configure_stored(list_neurons, list_con, file_name + \"Inhib_off\")\n",
     "model.stimulate(dataset2)"
    ]
   },
@@ -520,7 +522,7 @@
     "model.configure(input=input_group, generator=generator, time_step=dt)\n",
     "model.summary()\n",
     "\n",
-    "exc_neurons.random_mem()\n",
+    "exc_neurons.random_mem(mean=-60e-3, sigma=10e-3, seed=42)\n",
     "lplcon.set_evolve(True)"
    ]
   },
@@ -531,7 +533,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.stimulate(dataset1)"
+    "model.stimulate(dataset1, epoch=epoch)"
    ]
   },
   {
@@ -543,7 +545,7 @@
    "source": [
     "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
     "list_con = [lplcon.name]\n",
-    "model.configure_stored(list_neurons, list_con, \"_50000s_Inhib_fixed\")\n",
+    "model.configure_stored(list_neurons, list_con, file_name + \"Inhib_fixed\")\n",
     "model.stimulate(dataset2)"
    ]
   }
