--- a/analyze_result.ipynb
+++ b/analyze_result.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "input_group_size = 100\n",
     "duration     = 100.0\n",
-    "dt           = 2e-3\n",
+    "dt           = 1e-4\n",
     "bin_duration = 25e-3\n",
     "nb_inputs    = 500\n",
     "nb_units     = 100\n",
@@ -337,7 +337,7 @@
    "outputs": [],
    "source": [
     "# LPL\n",
-    "filename_lpl = \"_50000s_lpl\"\n",
+    "filename_lpl = \"_50000s_LPL\"\n",
     "out_lpl = utils.load_from_file(\"outs/out\" + filename_lpl)\n",
     "weight_lpl =  utils.load_from_file(\"outs/weight\" + filename_lpl)\n",
     "\n",
@@ -367,7 +367,7 @@
    "outputs": [],
    "source": [
     "# pred off\n",
-    "filename_pred_off = \"_20000s_Pred_off\"\n",
+    "filename_pred_off = \"_50000s_Pred_off\"\n",
     "out_pred_off = utils.load_from_file(\"outs/out\" + filename_pred_off)\n",
     "weight_pred_off =  utils.load_from_file(\"outs/weight\" + filename_pred_off)\n",
     "\n",
@@ -397,7 +397,7 @@
    "outputs": [],
    "source": [
     "# hebb off\n",
-    "filename_hebb_off = \"_50000s_lpl\"\n",
+    "filename_hebb_off = \"_50000s_Hebb_off\"\n",
     "out_hebb_off = utils.load_from_file(\"outs/out\" + filename_hebb_off)\n",
     "weight_heb_off =  utils.load_from_file(\"outs/weight\" + filename_hebb_off)\n",
     "\n",
@@ -427,7 +427,7 @@
    "outputs": [],
    "source": [
     "# inhib_off\n",
-    "filename_inhib_off = \"_50000s_lpl\"\n",
+    "filename_inhib_off = \"_50000s_Inhib_off\"\n",
     "out_inhib_off = utils.load_from_file(\"outs/out\" + filename_inhib_off)\n",
     "weight_inhib_off =  utils.load_from_file(\"outs/weight\" + filename_inhib_off)\n",
     "\n",
@@ -455,7 +455,7 @@
    "outputs": [],
    "source": [
     "# inhib_fixed\n",
-    "filename_inhib_fixed = \"_50000s_lpl\"\n",
+    "filename_inhib_fixed = \"_50000s_Inhib_fixed\"\n",
     "out_inhib_fixed = utils.load_from_file(\"outs/out\" + filename_inhib_fixed)\n",
     "weight_inhib_fixed =  utils.load_from_file(\"outs/weight\" + filename_inhib_fixed)\n",
     "\n",
@@ -538,23 +538,6 @@
     "\n",
     "# inhib_fixed\n",
     "rates_inhib_fixed, dim_inhib_fixed, weights_inhib_fixed, corrs_inhib_fixed = read_results(input_spikes_inhib_fixed, exc_spikes_inhib_fixed, wmat_inhib_fixed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d75e8237",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nb_elements_per_group = nb_inputs//5\n",
-    "print(nb_elements_per_group)\n",
-    "idxs = np.array([nb_elements_per_group*(i+1) for i in range(5)]) - 1\n",
-    "print(idxs)\n",
-    "sums = np.insert(np.cumsum(wmat_lpl, axis=0)[idxs], 0, 0, axis=0)\n",
-    "# print(sums)\n",
-    "slice_means = (sums[1:]-sums[:-1])/nb_elements_per_group\n",
-    "print(slice_means.shape)"
    ]
   },
   {
