--- a/stimulate.ipynb
+++ b/stimulate.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# Model Parameters\n",
-    "dt = 2e-3\n",
+    "dt = 1e-4\n",
     "time_window = 0.5\n",
     "nb_time_steps = (int)(time_window/dt)\n",
     "timestep_rmsprop_updates = nb_time_steps\n",
@@ -45,9 +45,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1 = np.loadtxt(\"spks/5hz_spikes_50000s_2.ras\")\n",
+    "data1 = np.loadtxt(\"spks/5hz_spikes_50000s.ras\")\n",
     "dataset1 = LPLDataset(data1, time_step=dt, time_window=time_window, device=device)\n",
-    "data2 = np.loadtxt(\"spks/5hz_spikes_100s_2.ras\")\n",
+    "data2 = np.loadtxt(\"spks/5hz_spikes_100s.ras\")\n",
     "dataset2 = LPLDataset(data2, time_step=dt, time_window=time_window, device=device)"
    ]
   },
