modifying pointer errors and add some notes

--- a/simulate.ipynb
+++ b/simulate.ipynb
@@ -25,9 +25,11 @@
    "source": [
     "# Model Parameters\n",
     "dt = 1e-4\n",
+    "# The time window determines how often the weights are updated with the data\n",
     "time_window = 0.5\n",
     "nb_time_steps = (int)(time_window/dt)\n",
     "timestep_rmsprop_updates = nb_time_steps\n",
+    "# batch_size must to be 1\n",
     "batch_size = 1\n",
     "nb_inputs = 500  \n",
     "nb_exc_units = 100\n",
@@ -64,7 +66,6 @@
     "lpl_con_w    = 0.15\n",
     "ii_con_w     = 0.4\n",
     "ie_con_w     = 0.5\n",
-    "\n",
     "ei_con_w     = 0.5"
    ]
   },
@@ -87,7 +88,8 @@
     "\n",
     "input_group = model.add_group(InputGroup(nb_inputs, name=\"input\"))\n",
     "exc_neurons = model.add_group(LPLGroup(nb_exc_units, name=\"exc\"))\n",
-    "inh_neurons = model.add_group(LPLGroup(nb_inh_units, name=\"inh\"))\n",
+    "inh_neurons = model.add_group(LPLGroup(nb_inh_units, name=\"inh\")) #\n",
+    "\n",
     "constraints1 = MinMaxConstraint(0.0, 1.0)\n",
     "constraints2 = MinMaxConstraint(0.0, 10.0)\n",
     "\n",
@@ -101,8 +103,8 @@
     "    target=\"exc\", \n",
     "    tau_post_mean=600,\n",
     "    constraints=constraints1,\n",
-    "    lamda_=1.0,\n",
-    "    phi=1.0,\n",
+    "    lamda_=1.0, # hebb\n",
+    "    phi=1.0, # pred\n",
     "    lr=1e-2,\n",
     "    delta_time=20e-3,\n",
     "    tau_rms=100.0,\n",
@@ -112,7 +114,7 @@
     "    Connection(\n",
     "        exc_neurons, \n",
     "        inh_neurons, \n",
-    "        gaussian=True,\n",
+    "        gaussian=True, # \n",
     "        initial_weight=ei_con_w, \n",
     "        name=\"Con1\", \n",
     "        target=\"exc\"))\n",
@@ -154,8 +156,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "model.stimulate(dataset1, epoch=epoch)"
+    "# 50000s\n",
+    "model.simulate(dataset1, epoch=epoch)"
    ]
   },
   {
@@ -165,10 +167,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 100s\n",
     "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
     "list_con = [lplcon.name]\n",
     "model.configure_stored(list_neurons, list_con, file_name + \"LPL\")\n",
-    "model.stimulate(dataset2)"
+    "model.simulate(dataset2)"
    ]
   },
   {
@@ -207,7 +210,7 @@
     "    tau_var=30,\n",
     "    constraints=constraints1,\n",
     "    lamda_=1.0,\n",
-    "    phi=0.0,\n",
+    "    phi=0.0, #\n",
     "    lr=1e-2,\n",
     "    delta_time=20e-3,\n",
     "    tau_rms=100.0,\n",
@@ -259,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.stimulate(dataset1, epoch=epoch)"
+    "model.simulate(dataset1, epoch=epoch)"
    ]
   },
   {
@@ -272,7 +275,7 @@
     "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
     "list_con = [lplcon.name]\n",
     "model.configure_stored(list_neurons, list_con, file_name + \"Pred_off\")\n",
-    "model.stimulate(dataset2)"
+    "model.simulate(dataset2)"
    ]
   },
   {
@@ -363,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.stimulate(dataset1, epoch=epoch)"
+    "model.simulate(dataset1, epoch=epoch)"
    ]
   },
   {
@@ -376,7 +379,7 @@
     "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
     "list_con = [lplcon.name]\n",
     "model.configure_stored(list_neurons, list_con, file_name + \"Hebb_off\")\n",
-    "model.stimulate(dataset2)"
+    "model.simulate(dataset2)"
    ]
   },
   {
@@ -434,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.stimulate(dataset1, epoch=epoch)"
+    "model.simulate(dataset1, epoch=epoch)"
    ]
   },
   {
@@ -447,7 +450,7 @@
     "list_neurons = [input_group.name, exc_neurons.name]\n",
     "list_con = [lplcon.name]\n",
     "model.configure_stored(list_neurons, list_con, file_name + \"Inhib_off\")\n",
-    "model.stimulate(dataset2)"
+    "model.simulate(dataset2)"
    ]
   },
   {
@@ -513,7 +516,7 @@
     "    Connection(\n",
     "        inh_neurons, \n",
     "        exc_neurons, \n",
-    "        gaussian=True,\n",
+    "        gaussian=False,\n",
     "        initial_weight=0.5, \n",
     "        name=\"Conie\", \n",
     "        target=\"inh\"))\n",
@@ -533,7 +536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.stimulate(dataset1, epoch=epoch)"
+    "model.simulate(dataset1, epoch=epoch)"
    ]
   },
   {
@@ -546,7 +549,7 @@
     "list_neurons = [input_group.name, exc_neurons.name, inh_neurons.name]\n",
     "list_con = [lplcon.name]\n",
     "model.configure_stored(list_neurons, list_con, file_name + \"Inhib_fixed\")\n",
-    "model.stimulate(dataset2)"
+    "model.simulate(dataset2)"
    ]
   }
  ],
