--- a/analyze_result.ipynb
+++ b/analyze_result.ipynb
@@ -38,7 +38,7 @@
     "input_group_size = 100\n",
     "duration     = 100.0\n",
     "dt           = 1e-4\n",
-    "bin_duration = 25e-3\n",
+    "bin_duration = 25e-3 ### \n",
     "nb_inputs    = 500\n",
     "nb_units     = 100\n",
     "current_directory = os.getcwd()\n",
@@ -212,9 +212,26 @@
    "source": [
     "def analyze(input_spikes, exc_spikes, inh_spikes, outputdir, runid, nb_inputs=500, nb_units=100, test_split=0.05, t_start=None, inh=False, quiet=False):\n",
     "\n",
+    "    \"\"\"\n",
+    "    This function analyzes neural spike data using Lasso regression and visualizes the results.\n",
+    "\n",
+    "    Parameters:\n",
+    "    input_spikes (array): The spike data from input neurons.\n",
+    "    exc_spikes (array): The spike data from excitatory neurons.\n",
+    "    inh_spikes (array): The spike data from inhibitory neurons.\n",
+    "    outputdir (str): The directory to save the output figures.\n",
+    "    runid (str): The identifier for the current run.\n",
+    "    nb_inputs (int): The number of input neurons.\n",
+    "    nb_units (int): The number of excitatory neurons.\n",
+    "    test_split (float): The fraction of data to be used for testing.\n",
+    "    t_start (int): The start time for analysis.\n",
+    "    inh (bool): Whether to include inhibitory neurons in the analysis.\n",
+    "\n",
+    "    \"\"\"\n",
     "    X, Y = get_binned_data(input_spikes, exc_spikes)\n",
     "\n",
     "    res = []\n",
+    "    \n",
     "    for g in range(5):\n",
     "        dataset = (X,Y[:,g])\n",
     "        ds_train, ds_test = split_dataset(dataset,split=1.0-test_split)\n",
